[package]
name = "dna_parser"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dna_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
rand= "0.8.5"
itertools = "0.13.0"
numpy= "0.21"
num_cpus = "1.15.0"
ahash = "0.8.11"
