[build-system]
requires = ["maturin>=1.6.0"]
build-backend = "maturin"

[project]
name = "dna_parser"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ['numpy >= 1.16.0', 'scipy >= 1.3.0']

[project.optional-dependencies]
dev = ["pytest","mkdocs"]

[tool.maturin]
python-source = "python"

